--- a/index.html
+++ b/index.html
@@ -11,19 +11,21 @@
 
 <body>
     <div class="container">
-        <div data-id="0"></div>
-        <div data-id="1"></div>
-        <div data-id="2"></div>
-        <div data-id="3"></div>
-        <div data-id="4"></div>
-        <div data-id="5"></div>
-        <div data-id="6"></div>
-        <div data-id="7"></div>
-        <div data-id="8"></div>
     </div>
     <div class="winner"></div>
     <button>reset</button>
     <script>
+        const container = document.querySelector('.container')
+        const createDivs = () => {
+            for (let i = 0; i < 9; i++) {
+                const div = document.createElement('div')
+                div.setAttribute('data-id', 0)
+                container.appendChild(div)
+            }
+
+        }
+        createDivs()
+
         const winnings = [
             [0, 1, 2],
             [3, 4, 5],
