--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         const createDivs = () => {
             for (let i = 0; i < 9; i++) {
                 const div = document.createElement('div')
-                div.setAttribute('data-id', 0)
+                div.setAttribute('data-id', i)
                 container.appendChild(div)
             }
 
